--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 /* --- 2. BACKGROUND VISUALS --- */
 .bg-fixed {
     position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-    background-image: url('background.png');
+    background-image: url('background.webp');
     background-size: cover;
     background-position: center;
     z-index: -4;
